--- a/DHEN/index.html
+++ b/DHEN/index.html
@@ -196,11 +196,11 @@
                     <div class="grid md:grid-cols-2 gap-4 items-center">
                         <div class="text-center">
                             <span class="text-slate-500 font-bold">BEFORE</span>
-                            <img src="/Assets/images/DEHN Webapp Before.gif" alt="Static Brochure" class="rounded-xl shadow-lg mt-2 mx-auto">
+                            <img src="/DHEN/Assets/images/DEHN Webapp Before.gif" alt="Static Brochure" class="rounded-xl shadow-lg mt-2 mx-auto">
                         </div>
                         <div class="text-center">
                             <span class="text-slate-500 font-bold">AFTER</span>
-                            <img src="/Assets/images/DEHN Webapp After.gif" alt="Interactive 3D WebApp" class="rounded-xl shadow-2xl mt-2 mx-auto border-4 border-white">
+                            <img src="/DHEN/Assets/images/DEHN Webapp After.gif" alt="Interactive 3D WebApp" class="rounded-xl shadow-2xl mt-2 mx-auto border-4 border-white">
                         </div>
                     </div>
                 </div>
