--- a/DHEN/index.html
+++ b/DHEN/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DEHN India Case Study | Advertflair</title>
-    
+      <link rel="icon" href="/DHEN/Assets/images/favicon_adv.ico" type="image/x-icon">
+      <link rel="icon" href="/DHEN/Assets/images/favicon_adv.png" type="image/png">
+<link rel="icon" href="/DHEN/Assets/images/favicon_adv.svg" type="image/svg+xml">
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     
