--- a/Crozier/404.html
+++ b/Crozier/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found | DEHN India Case Study</title>
+    <title>404 - Page Not Found | Crozier Fine Arts Case Study</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 flex items-center justify-center min-h-screen">
@@ -11,7 +11,7 @@
         <div class="text-6xl font-bold text-gray-300 mb-4">404</div>
         <h1 class="text-2xl font-bold text-gray-800 mb-4">Page Not Found</h1>
         <p class="text-gray-600 mb-8">The page you are looking for does not exist.</p>
-        <a href="/DHEN/" class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors">
+        <a href="/Crozier/" class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors">
             Return to Case Study
         </a>
     </div>
