--- a/Crozier/index.html
+++ b/Crozier/index.html
@@ -359,21 +359,21 @@
                 <!-- Social Media Grid Placeholder -->
                 <div class="grid md:grid-cols-3 gap-6 max-w-4xl mx-auto">
                     <div class="text-center">
-                        <img src="[PLACEHOLDER_SOCIAL_1]" alt="High Engagement Social Post 1" class="rounded-xl shadow-lg mx-auto mb-4">
+                        <img src="/Crozier/Assets/images/Instagram_post_1.webp" alt="High Engagement Social Post 1" class="rounded-xl shadow-lg mx-auto mb-4">
                         <div class="flex items-center justify-center space-x-4 text-slate-600">
                             <span class="flex items-center"><i data-lucide="heart" class="w-4 h-4 mr-1"></i> [LIKES_COUNT]</span>
                             <span class="flex items-center"><i data-lucide="message-circle" class="w-4 h-4 mr-1"></i> [COMMENTS_COUNT]</span>
                         </div>
                     </div>
                     <div class="text-center">
-                        <img src="[PLACEHOLDER_SOCIAL_2]" alt="High Engagement Social Post 2" class="rounded-xl shadow-lg mx-auto mb-4">
+                        <img src="/Crozier/Assets/images/Instagram_post_2.webp" alt="High Engagement Social Post 2" class="rounded-xl shadow-lg mx-auto mb-4">
                         <div class="flex items-center justify-center space-x-4 text-slate-600">
                             <span class="flex items-center"><i data-lucide="heart" class="w-4 h-4 mr-1"></i> [LIKES_COUNT]</span>
                             <span class="flex items-center"><i data-lucide="message-circle" class="w-4 h-4 mr-1"></i> [COMMENTS_COUNT]</span>
                         </div>
                     </div>
                     <div class="text-center">
-                        <img src="[PLACEHOLDER_SOCIAL_3]" alt="High Engagement Social Post 3" class="rounded-xl shadow-lg mx-auto mb-4">
+                        <img src="/Crozier/Assets/images/Instagram_post_3.webp" alt="High Engagement Social Post 3" class="rounded-xl shadow-lg mx-auto mb-4">
                         <div class="flex items-center justify-center space-x-4 text-slate-600">
                             <span class="flex items-center"><i data-lucide="heart" class="w-4 h-4 mr-1"></i> [LIKES_COUNT]</span>
                             <span class="flex items-center"><i data-lucide="message-circle" class="w-4 h-4 mr-1"></i> [COMMENTS_COUNT]</span>
