--- a/Crozier/index.html
+++ b/Crozier/index.html
@@ -361,22 +361,19 @@
                     <div class="text-center">
                         <img src="/Crozier/Assets/images/Instagram_post_1.webp" alt="High Engagement Social Post 1" class="rounded-xl shadow-lg mx-auto mb-4">
                         <div class="flex items-center justify-center space-x-4 text-slate-600">
-                            <span class="flex items-center"><i data-lucide="heart" class="w-4 h-4 mr-1"></i> [LIKES_COUNT]</span>
-                            <span class="flex items-center"><i data-lucide="message-circle" class="w-4 h-4 mr-1"></i> [COMMENTS_COUNT]</span>
+                            <span class="flex items-center"><i data-lucide="heart" class="w-4 h-4 mr-1"></i> 117</span>
                         </div>
                     </div>
                     <div class="text-center">
                         <img src="/Crozier/Assets/images/Instagram_post_2.webp" alt="High Engagement Social Post 2" class="rounded-xl shadow-lg mx-auto mb-4">
                         <div class="flex items-center justify-center space-x-4 text-slate-600">
-                            <span class="flex items-center"><i data-lucide="heart" class="w-4 h-4 mr-1"></i> [LIKES_COUNT]</span>
-                            <span class="flex items-center"><i data-lucide="message-circle" class="w-4 h-4 mr-1"></i> [COMMENTS_COUNT]</span>
+                            <span class="flex items-center"><i data-lucide="heart" class="w-4 h-4 mr-1"></i> 115</span>
                         </div>
                     </div>
                     <div class="text-center">
                         <img src="/Crozier/Assets/images/Instagram_post_3.webp" alt="High Engagement Social Post 3" class="rounded-xl shadow-lg mx-auto mb-4">
                         <div class="flex items-center justify-center space-x-4 text-slate-600">
-                            <span class="flex items-center"><i data-lucide="heart" class="w-4 h-4 mr-1"></i> [LIKES_COUNT]</span>
-                            <span class="flex items-center"><i data-lucide="message-circle" class="w-4 h-4 mr-1"></i> [COMMENTS_COUNT]</span>
+                            <span class="flex items-center"><i data-lucide="heart" class="w-4 h-4 mr-1"></i> 164</span>
                         </div>
                     </div>
                 </div>
