--- a/Crozier/index.html
+++ b/Crozier/index.html
@@ -469,23 +469,4 @@
     </script>
 
 </body>
-</html>name" class="block text-sm font-medium text-white/80 mb-1">Full Name</label>
-                                            <input type="text" id="name" name="name" required class="w-full bg-white/20 border-white/30 border rounded-lg py-2 px-3 text-white placeholder-white/50 focus:outline-none focus:ring-2 focus:ring-[#ff9e02]">
-                                        </div>
-                                        <div>
-                                            <label for="email" class="block text-sm font-medium text-white/80 mb-1">Work Email</label>
-                                            <input type="email" id="email" name="email" required class="w-full bg-white/20 border-white/30 border rounded-lg py-2 px-3 text-white placeholder-white/50 focus:outline-none focus:ring-2 focus:ring-[#ff9e02]">
-                                        </div>
-                                    </div>
-                                    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-                                        <div>
-                                            <label for="phone" class="block text-sm font-medium text-white/80 mb-1">Phone Number</label>
-                                            <input type="tel" id="phone" name="phone" required class="w-full bg-white/20 border-white/30 border rounded-lg py-2 px-3 text-white placeholder-white/50 focus:outline-none focus:ring-2 focus:ring-[#ff9e02]">
-                                        </div>
-                                        <div>
-                                            <label for="company" class="block text-sm font-medium text-white/80 mb-1">Company Name</label>
-                                            <input type="text" id="company" name="company" required class="w-full bg-white/20 border-white/30 border rounded-lg py-2 px-3 text-white placeholder-white/50 focus:outline-none focus:ring-2 focus:ring-[#ff9e02]">
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <label for="
+</html>
