--- a/Dillards/index.html
+++ b/Dillards/index.html
@@ -234,7 +234,7 @@
             <h3 class="text-2xl font-bold text-center mb-8">Intelligent Upload System: Controlled AI Precision</h3>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- Input Card 1 -->
-                <div class="input-section p-6 rounded-xl shadow-lg">
+                <div class="bg-white rounded-2xl shadow-xl p-6 border-2 border-[#4934bc]">
                     <div class="flex items-center mb-4">
                         <i data-lucide="shirt" class="w-8 h-8 text-[#4934bc] mr-3"></i>
                         <h4 class="font-bold text-lg">Apparel Details</h4>
@@ -249,7 +249,7 @@
                 </div>
 
                 <!-- Input Card 2 -->
-                <div class="input-section p-6 rounded-xl shadow-lg">
+                <div class="bg-white rounded-2xl shadow-xl p-6 border-2 border-[#4934bc]">
                     <div class="flex items-center mb-4">
                         <i data-lucide="gem" class="w-8 h-8 text-[#4934bc] mr-3"></i>
                         <h4 class="font-bold text-lg">Accessory Pairing</h4>
@@ -264,7 +264,7 @@
                 </div>
 
                 <!-- Input Card 3 -->
-                <div class="input-section p-6 rounded-xl shadow-lg">
+                <div class="bg-white rounded-2xl shadow-xl p-6 border-2 border-[#4934bc]">
                     <div class="flex items-center mb-4">
                         <i data-lucide="users" class="w-8 h-8 text-[#4934bc] mr-3"></i>
                         <h4 class="font-bold text-lg">Model & Poses</h4>
@@ -279,7 +279,7 @@
                 </div>
 
                 <!-- Input Card 4 -->
-                <div class="input-section p-6 rounded-xl shadow-lg">
+                <div class="bg-white rounded-2xl shadow-xl p-6 border-2 border-[#4934bc]">
                     <div class="flex items-center mb-4">
                         <i data-lucide="image" class="w-8 h-8 text-[#4934bc] mr-3"></i>
                         <h4 class="font-bold text-lg">Background Themes</h4>
@@ -294,7 +294,7 @@
                 </div>
 
                 <!-- Input Card 5 -->
-                <div class="input-section p-6 rounded-xl shadow-lg">
+                <div class="bg-white rounded-2xl shadow-xl p-6 border-2 border-[#4934bc]">
                     <div class="flex items-center mb-4">
                         <i data-lucide="palette" class="w-8 h-8 text-[#4934bc] mr-3"></i>
                         <h4 class="font-bold text-lg">Style Direction</h4>
@@ -309,7 +309,7 @@
                 </div>
 
                 <!-- Input Card 6 -->
-                <div class="input-section p-6 rounded-xl shadow-lg">
+                <div class="bg-white rounded-2xl shadow-xl p-6 border-2 border-[#4934bc]">
                     <div class="flex items-center mb-4">
                         <i data-lucide="target" class="w-8 h-8 text-[#4934bc] mr-3"></i>
                         <h4 class="font-bold text-lg">Output Requirements</h4>
