--- a/index.html
+++ b/index.html
@@ -129,7 +129,6 @@
         </div>
     </div>
 </section>
-
 <!-- Case Studies Grid -->
 <section id="case-studies" class="py-20 bg-slate-50">
     <div class="container mx-auto px-6">
@@ -145,13 +144,13 @@
                 <div class="h-48 relative overflow-hidden">
                     <!-- Background Image -->
                     <img src="/Dillards/Assets/images/Option-1.webp" alt="Dillards Fashion Background" class="absolute inset-0 w-full h-full object-cover">
-                    <!-- Gradient Overlay -->
-                    <div class="absolute inset-0 bg-gradient-to-br from-[#4934bc]/90 to-[#3a2a9a]/90"></div>
+                    <!-- Subtle Dark Overlay -->
+                    <div class="absolute inset-0 bg-black/40"></div>
                     <!-- Content -->
                     <div class="relative text-white text-center z-10 flex items-center justify-center h-full">
-                        <div>
-                            <h3 class="text-2xl font-bold mb-2">Dillards</h3>
-                            <span class="px-3 py-1 bg-white/20 rounded-full text-sm">Fashion & E-commerce</span>
+                        <div class="bg-black/30 backdrop-blur-sm rounded-xl px-6 py-4 border border-white/20">
+                            <h3 class="text-2xl font-bold mb-2 text-white drop-shadow-lg">Dillards</h3>
+                            <span class="px-3 py-1 bg-white/90 text-slate-800 rounded-full text-sm font-medium">Fashion & E-commerce</span>
                         </div>
                     </div>
                 </div>
@@ -194,13 +193,13 @@
                 <div class="h-48 relative overflow-hidden">
                     <!-- Background Image -->
                     <img src="/Crozier/Assets/images/Crate_after.webp" alt="Crozier Art Storage Background" class="absolute inset-0 w-full h-full object-cover">
-                    <!-- Gradient Overlay -->
-                    <div class="absolute inset-0 bg-gradient-to-br from-amber-500/90 to-orange-600/90"></div>
+                    <!-- Subtle Dark Overlay -->
+                    <div class="absolute inset-0 bg-black/40"></div>
                     <!-- Content -->
                     <div class="relative text-white text-center z-10 flex items-center justify-center h-full">
-                        <div>
-                            <h3 class="text-2xl font-bold mb-2">Crozier Fine Arts</h3>
-                            <span class="px-3 py-1 bg-white/20 rounded-full text-sm">Art Storage & Transport</span>
+                        <div class="bg-black/30 backdrop-blur-sm rounded-xl px-6 py-4 border border-white/20">
+                            <h3 class="text-2xl font-bold mb-2 text-white drop-shadow-lg">Crozier Fine Arts</h3>
+                            <span class="px-3 py-1 bg-white/90 text-slate-800 rounded-full text-sm font-medium">Art Storage & Transport</span>
                         </div>
                     </div>
                 </div>
@@ -243,13 +242,13 @@
                 <div class="h-48 relative overflow-hidden">
                     <!-- Background Image -->
                     <img src="/DHEN/Assets/images/DEHN Webapp After.gif" alt="DHEN Interactive Experience Background" class="absolute inset-0 w-full h-full object-cover">
-                    <!-- Gradient Overlay -->
-                    <div class="absolute inset-0 bg-gradient-to-br from-emerald-500/90 to-teal-600/90"></div>
+                    <!-- Subtle Dark Overlay -->
+                    <div class="absolute inset-0 bg-black/40"></div>
                     <!-- Content -->
                     <div class="relative text-white text-center z-10 flex items-center justify-center h-full">
-                        <div>
-                            <h3 class="text-2xl font-bold mb-2">DHEN India</h3>
-                            <span class="px-3 py-1 bg-white/20 rounded-full text-sm">Electrical Manufacturing</span>
+                        <div class="bg-black/30 backdrop-blur-sm rounded-xl px-6 py-4 border border-white/20">
+                            <h3 class="text-2xl font-bold mb-2 text-white drop-shadow-lg">DHEN India</h3>
+                            <span class="px-3 py-1 bg-white/90 text-slate-800 rounded-full text-sm font-medium">Electrical Manufacturing</span>
                         </div>
                     </div>
                 </div>
