copy changes to the case study

--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
                             <span class="text-sm font-semibold text-[#4934bc]">Photo Agency Replacement</span>
                         </div>
                         <p class="text-slate-600 text-sm mb-4">
-                            <strong>Challenge:</strong> Major department store needed scalable model photography for thousands of products without expensive photo shoots.
+                            <strong>Challenge:</strong> Major department store needed to reduce photography costs and accelerate time-to-market while maintaining complete creative freedom for thousands of product launches.
                         </p>
                         <p class="text-slate-600 text-sm mb-4">
-                            <strong>Solution:</strong> Custom Glam AI and Style AI platforms delivering photo-agency quality with 98% texture accuracy at 1/3rd the cost.
+                            <strong>Solution:</strong> Custom Glam AI and Style AI platforms delivering unlimited creative variations with 98% texture accuracy—cutting costs by 2/3rds and reducing time-to-market by 10x.
                         </p>
                     </div>
                     <div class="border-t pt-4">
@@ -212,7 +212,7 @@
                             <span class="text-sm font-semibold text-amber-800">Premium Brand Positioning</span>
                         </div>
                         <p class="text-slate-600 text-sm mb-4">
-                            <strong>Challenge:</strong> World-leading art logistics company had industrial imagery unsuitable for billionaire art collectors and luxury galleries.
+                            <strong>Challenge:</strong> Leading art logistics company's outdated imagery failed to communicate their premium positioning and connect with today's art market.
                         </p>
                         <p class="text-slate-600 text-sm mb-4">
                             <strong>Solution:</strong> Photorealistic 3D asset library transforming trucks, warehouses, and crates into luxury-standard visuals.
