added href to the logos

--- a/Dillards/index.html
+++ b/Dillards/index.html
@@ -69,8 +69,9 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center space-x-2">
-                     <img src="https://cdn.prod.website-files.com/6336da2704c4776a047e9529/6336da2704c47740ce7e9542_image%201.webp" href="https://casestudies.advertflair.com/" alt="Advertflair Logo" class="h-10 w-auto">
-                </div>
+<a href="https://casestudies.advertflair.com/">
+    <img src="https://cdn.prod.website-files.com/6336da2704c4776a047e9529/6336da2704c47740ce7e9542_image%201.webp" alt="Advertflair Logo" class="h-10 w-auto">
+</a>                </div>
                 <nav class="hidden md:flex items-center space-x-8">
                     <a href="#problem" class="text-slate-600 hover:text-[#4934bc] transition-colors">The Problem</a>
                     <a href="#solution" class="text-slate-600 hover:text-[#4934bc] transition-colors">Our Solution</a>
