crozier copy update

--- a/Crozier/index.html
+++ b/Crozier/index.html
@@ -104,7 +104,7 @@
                     Transforming Art Logistics into Luxury Brand Experiences
                 </h1>
                 <p class="max-w-3xl mx-auto text-lg md:text-xl text-white/80 mb-12">
-                    How Crozier Fine Arts elevated their visual identity to match their world-class reputation and captivate billionaire art collectors.
+                    How Crozier Fine Arts elevated their visual identity to match their world-class reputation and reflect their industry-leading service standards.
                 </p>
                 <div class="flex justify-center space-x-4">
                     <a href="#impact" class="bg-[#fe2267] text-white font-bold px-8 py-4 rounded-lg hover:bg-[#e01b58] transition-all duration-300 transform hover:scale-105">
@@ -151,7 +151,7 @@
                 <div class="text-center max-w-3xl mx-auto">
                     <h2 class="text-3xl md:text-4xl font-bold mb-4">The <span class="text-gradient">Problem</span>: Visual Identity Mismatched Premium Service</h2>
                     <p class="text-lg text-slate-600">
-                        Crozier Fine Arts, the world's leading art storage and transport company, had a reputation problem. Despite serving billionaire art collectors and prestigious galleries globally, their visual content told a different story.
+                        Crozier Fine Arts, the world's leading art storage and transport company, had a reputation problem. Despite serving the world's most prestigious galleries and collectors, their visual content failed to match their reputation.
                     </p>
                 </div>
                 <div class="mt-16 grid md:grid-cols-2 lg:grid-cols-4 gap-8">
@@ -169,7 +169,7 @@
                             <i data-lucide="user-x" class="text-[#4934bc]"></i>
                         </div>
                         <h3 class="font-bold text-lg mb-2">Business Development Roadblock</h3>
-                        <p class="text-slate-600">VP of Business Development couldn't show existing imagery to High Net Worth clients without damaging brand perception.</p>
+                        <p class="text-slate-600">Business Development team couldn't show existing imagery to High Net Worth clients without damaging brand perception.</p>
                     </div>
                     <!-- Problem Card 3 -->
                     <div class="bg-white p-6 rounded-xl shadow-lg border border-slate-200/50">
@@ -322,8 +322,8 @@
                             <i data-lucide="crown" class="w-8 h-8 text-[#ff9e02]"></i>
                         </div>
                         <p class="text-4xl font-extrabold text-slate-800">HNI</p>
-                        <h3 class="font-semibold text-xl mt-2">Client-Ready Materials</h3>
-                        <p class="text-slate-600 mt-2">Business development team gained confidence presenting to billionaire art collectors with luxury-standard visuals.</p>
+                        <h3 class="font-semibold text-xl mt-2">Premium Client-Ready Materials</h3>
+                        <p class="text-slate-600 mt-2">Business development team gained confidence presenting to prestigious galleries and collectors with luxury-standard visuals.</p>
                     </div>
                     <!-- Stat Card 3 -->
                     <div class="stat-card bg-white p-8 rounded-2xl shadow-xl border border-slate-200/50">
