crozier copy update ad

--- a/Crozier/index.html
+++ b/Crozier/index.html
@@ -151,7 +151,7 @@
                 <div class="text-center max-w-3xl mx-auto">
                     <h2 class="text-3xl md:text-4xl font-bold mb-4">The <span class="text-gradient">Problem</span>: Visual Identity Mismatched Premium Service</h2>
                     <p class="text-lg text-slate-600">
-                        Crozier Fine Arts, the world's leading art storage and transport company, had a reputation problem. Despite serving the world's most prestigious galleries and collectors, their visual content failed to match their reputation.
+                        Crozier Fine Arts, the world's leading art storage and transport company, needed better brand alignment. Despite serving the world's most prestigious galleries and collectors, their visual content failed to match their reputation.
                     </p>
                 </div>
                 <div class="mt-16 grid md:grid-cols-2 lg:grid-cols-4 gap-8">
