crozier copy changes

--- a/index.html
+++ b/index.html
@@ -221,12 +221,12 @@
                     <div class="border-t pt-4">
                         <div class="grid grid-cols-2 gap-4 mb-4">
                             <div class="text-center">
-                                <div class="text-lg font-bold text-amber-600">Peak</div>
-                                <div class="text-xs text-slate-500">Social Engagement</div>
+                                <div class="text-lg font-bold text-amber-600">Luxury</div>
+                                <div class="text-xs text-slate-500">Imagery</div>
                             </div>
                             <div class="text-center">
-                                <div class="text-lg font-bold text-orange-600">HNI</div>
-                                <div class="text-xs text-slate-500">Client Ready</div>
+                                <div class="text-lg font-bold text-orange-600">Premium</div>
+                                <div class="text-xs text-slate-500">Positioning</div>
                             </div>
                         </div>
                         <a href="https://casestudies.advertflair.com/Crozier/" 
